--- a/public/global.css
+++ b/public/global.css
@@ -39,8 +39,8 @@ select,
 textarea {
   font-family: inherit;
   font-size: inherit;
-  padding: 0.2em;
-  margin: 0 0 1em 0;
+  padding: 0.1em;
+  margin: 0 0 0.5em 0;
   box-sizing: border-box;
   border: 1px solid #ccc;
   border-radius: 2px;
@@ -55,10 +55,15 @@ input[type="range"] {
 }
 
 button {
-  color: #333;
-  background-color: #f4f4f4;
+  color: #fff;
+  background: #ff3e00;
   outline: none;
   padding: 10px;
+}
+
+button:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 button:disabled {
